# astrbot_plugin_iris_memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  PROJECT_REFERENCE.md  README.md  REFACTORING.md  REFACTOR_PLAN.md  _conf_schema.json  companion-memory-framework.md  framework.md  main.py  metadata.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_config_chain_standalone.py  test_local.py  test_multidimensional_scoring.py  tests_analysis_errors_report.md  tests_checking_report.md  tests_fixes_summary.md  tests_fixing_final_report.md  tests_fixing_report.md  tests_fixing_report_final.md  tests_fixing_summary.md  tests_supplement_report.md
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-init.sh  entrypoint.sh  manager.sh  test_docker.py  test_docker.sh
iris_memory/: __init__.py
iris_memory/analysis/: __init__.py  emotion_analyzer.py  emotion_decay.py  entity_extractor.py  llm_emotion_analyzer.py  multidimensional_scorer.py  persona_extractor.py  reinforcement.py  rif_scorer.py
iris_memory/capture/: __init__.py  batch_processor.py  capture_engine.py  capture_logger.py  conflict_resolver.py  engine.py  fast_track.py  llm_conflict_resolver.py  llm_sensitivity_detector.py  llm_trigger_detector.py  message_classifier.py  message_merger.py  scope_classifier.py  sensitivity_detector.py  trigger_detector.py
iris_memory/commands/: __init__.py  all_handler.py  base.py  executor.py  (+8 more)
tests/: README.md  README_CONFIG_TESTING.md  __init__.py  conftest.py  test_image_filters.py  test_iris_memory.py  test_stats_module.py
(+579 files in other folders)
