[project]
name = "astrbot-plugin-iris-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=0.4.0",
    "numpy>=2.4.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dateutil>=2.9.0.post0",
    "sentence-transformers>=2.2.0",
]
