[project]
name = "astrbot-plugin-iris-memory"
version = "1.7.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0,<26",
    "chromadb>=0.5.0,<0.7",
    "numpy>=2.4.1,<2.6",
    "python-dateutil>=2.9.0,<3",
    "sentence-transformers>=2.2.0,<3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9",
    "pytest-asyncio>=0.21.0,<1",
    "pytest-cov>=4.1.0,<6",
]
